<resources>
    <string name="app_name">Taxi bee</string>
    <string name="AddDriver">Add driver and before staring the trip</string>
    <string name="AddDriverSetting">Add driver and car from settings before staring the trips.</string>
    <string name="GotoSettings">Go to Settings</string>
    <string name="GOBack">Go Back</string>
    <string name="select_driver">Select driver</string>
    <string name="select_car">Select car</string>
    <string name="milage">Milage :</string>
    <string name="start_gps_trip">Start GPS Trip</string>
    <string name="manual_trip">Manual Trip</string>
    <string name="trip_history">Trip History</string>
    <string name="price_calculator">Price Calculator</string>
    <string name="AddPricing">Add Pricing</string>
    <string name="settings">Settings</string>
    <string name="export_log">Export Log</string>
    <string name="select_car_for_ride">Select car for ride</string>
    <string name="driver_details">Driver Details</string>
    <string name="add_or_remove_drivers">Add or remove drivers</string>
    <string name="car">Car</string>
    <string name="create_or_modify_car_details">Create or modify car details</string>
    <string name="type_of_trips">Type of Trips</string>
    <string name="create_or_modify_type_of_trips">Create or modify Type of trips</string>
    <string name="payment">Payment</string>
    <string name="base_charge">Base charge</string>
    <string name="charge_per_kilometre">Charge per kilometre</string>
    <string name="charge_per_minute">Charge per minute</string>
    <string name="payment_method">Payment Method</string>
    <string name="show_statistics">Show Statistics</string>
    <string name="save_backup">Save backup</string>
    <string name="restore_backup">Restore backup</string>
    <string name="export_trips_pdf_csv">Export Trips (pdf/csv)</string>
    <string name="delete_driver_s_log_trips">Delete driver\'s log trips</string>
    <string name="legal">Legal</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="add_new_driver">Add New Driver</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save_changes">Save Changes</string>
    <string name="create_driver_details">Create Driver Details</string>
    <string name="edit_driver_details">Edit Driver Details</string>
    <string name="create_driver">Create Driver</string>
    <string name="add_new_car">Add New Car</string>
    <string name="car_company">Car Company</string>
    <string name="enter_car_company_name">Enter car company name</string>
    <string name="car_model">Car Model</string>
    <string name="enter_car_model">Enter car model</string>
    <string name="registration_number">Registration number</string>
    <string name="enter_reg_no">Enter reg.no (eg : WOK RM 8426)</string>
    <string name="save_details">Save Details</string>
    <string name="edit_car_details">Edit Car Details</string>
    <string name="delete_car">Delete Car?</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_car_details">Are you sure, you want to delete car details</string>
    <string name="add_new_trip_type">Add New Trip Type</string>
    <string name="select_type_of_trips">Select Type of Trips</string>
    <string name="enter_trip_title">Enter Trip Title</string>
    <string name="save">Save</string>
    <string name="charge_per_km">Charge Per KM</string>
    <string name="chf_km">CHf/KM</string>
    <string name="add_new_payment">Add New Payment</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="enter_payment_title">Enter payment title</string>
    <string name="start_location">Start Location</string>
    <string name="enter_start_location">Enter start Location</string>
    <string name="destination">Destination</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="add_another_destination_point">Add another destination point</string>
    <string name="optional">(optional)</string>
    <string name="calculation_type">Calculation Type</string>
    <string name="automatic_order">Automatic Order</string>
    <string name="if_more_than_one">If more than one destination added, app choose best order automatically</string>
    <string name="manual_order">Manual Order</string>
    <string name="manualy_choose">Manualy choose the order of waypoints</string>
    <string name="chf">CHF</string>
    <string name="calculate_price">Calculate Price</string>
    <string name="search_here">Search here...</string>
    <string name="google_maps_key">AIzaSyCZTgso1EYEw0PHaiaM5Nm58Iee-hmafc8</string>
<!--    <string name="google_maps_key">AIzaSyBO8qS1CqA-9X_SXq-QXRntzDRL7yrV4eQ</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="km_hr">km/hr</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="DriverName">Driver Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="Login">Login</string>
    <string name="distanz">Distanz :</string>
    <string name="h_he">Höhe :</string>
    <string name="genauigkeit">Genauigkeit:</string>
    <string name="dauer">Dauer:</string>
    <string name="finish_trip">Finish Trip</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="cancel_trip_">Cancel Trip?</string>
    <string name="are_you_sure_trip_cancel">"Are you sure, you want to cancel the trip. This action can't be revert. "</string>
    <string name="nogoback">No,Go Back</string>
    <string name="trip_summary">Trip Summary</string>
    <string name="driver_name">Driver Name</string>
    <string name="car_details">Car Details</string>
    <string name="start_km">Start Km</string>
    <string name="destinationkm">DestinationKm</string>
    <string name="traveled_km">Traveled Km</string>
    <string name="date_and_time">Date and Time</string>
    <string name="travel_time">Travel Time</string>
    <string name="fare">Fare</string>
    <string name="cash">Cash</string>
    <string name="upi">UPI</string>
    <string name="don_t_save_deatils">Don’t Save deatils</string>
    <string name="save_trip_details">Save Trip Details</string>
    <string name="dont_save_trip">Don’t Save Trip Details?</string>
    <string name="are_you_sure_dont_save_trip">Are you sure, you don’t want to save the trip details. This action can\'t be revert. </string>
    <string name="GoBack">Go Back</string>
    <string name="dont_save">Don’t Save</string>
    <string name="trip_type">Trip Type</string>
    <string name="taxi_trip">Taxi Trip</string>
    <string name="failed_trip">Failed Trip</string>
    <string name="empty_trip">Empty Trip</string>
    <string name="private_trip">Private Trip</string>
    <string name="enter_destination_km">Enter Destination Km</string>
    <string name="destination_km_">Destination Km</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="_00_00">00:00</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_fare">Enter Fare</string>
    <string name="edit_trip_summary">Edit Trip Summary</string>
    <string name="backup_date">Backup Date</string>
    <string name="keep_your_data_safe">Keep your data safe by backing them up</string>
    <string name="Backup">Backup</string>
    <string name="complete" translatable="false">Complete</string>
    <string name="Uploading">Uploading</string>
    <string name="Restore_backup_data">Restore Backup Data</string>
    <string name="Restore_data_from_cloud">Restore data from cloud</string>
    <string name="Restore_data">Restore Data</string>
    <string name="Downloading">Downloading</string>
    <string name="SeleteDriverLog">Selete Driver\'s Log Trips</string>
    <string name="are_you_sure_delete_trip">Are you sure, you want to delete driver\'s log trips details</string>
    <string name="STATISTICS">Statistics</string>
    <string name="total_trips">Total Trips</string>
    <string name="total_distance">Total Distance</string>
    <string name="online_hr">Online Hr</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="VehicleAdded">Vehicle Added</string>
    <string name="TripAdded">Trip Added</string>
    <string name="PriceChangeSuccessfully">Price Change Successfully</string>
    <string name="continuew">Continue</string>
    <string name="type_of_trip">Type Of Trip</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="FieldEmpty">Enter valid fields</string>
    <string name="Pricdeaddedsuccess">Price Added Successfully</string>
    <string name="EnterDestination">Enter Destination</string>
    <string name="TripSaved">Trip Saved Successfully</string>
    <string name="SelectDate">Select Date</string>
    <string name="SelectStartTime">Select Start Time</string>
    <string name="SelectEndTime">Select End Time</string>
    <string name="EnterFare">Enter Fare</string>
    <string name="SelectValidAddress">Select Valid Address</string>
    <string name="Selectstartordestinationlocation">Select start or destination location</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_name">Enter name</string>
    <string name="add_driverr">Add Driver</string>
    <string name="edit_driver">Edit Driver</string>
    <string name="User_already_exist">User already exist</string>
    <string name="permissionx_access_background_location">Background location</string>

    <string name="permissionx_system_alert_window">Display over other apps</string>

    <string name="permissionx_write_settings">Modify system settings</string>

    <string name="permissionx_manage_external_storage">All files access</string>

    <string name="permissionx_request_install_packages">Install unknown apps</string>
    <string name="SelecteProfile">Select profile</string>
    <string name="Uploadinngg">Uploading...</string>
    <string name="Drivercreatedsuccessfully">Driver created successfully</string>
    <string name="dialog_default_title">Here\'s a message!</string>

    <string name="dialog_ok">OK</string>

    <string name="dialog_cancel">Cancel</string>

    <string name="LOADING">Loading...</string>
    <string name="DriverUpdatedSuccessfully">Driver updated successfully</string>
    <string name="delete_driver">Delete Driver</string>
    <string name="are_you_sure_delete_driver">Are you sure to delete driver?</string>
    <string name="DRiverDeleted">Driver deleted</string>
    <string name="DriverDeleting">Driver deleting...</string>
    <string name="select_vehicle_image">Select vehicle image</string>
    <string name="CarAdding">Car Adding...</string>
    <string name="AddCar">Add Car</string>
    <string name="Edit_Car">Edit Car</string>
    <string name="UpdateCar">Car Updating...</string>
    <string name="CarDeleted">Car Deleted</string>
    <string name="DeletingCar">Deleting Car...</string>
    <string name="CarUpdated">CarUpdated Successfully</string>
    <string name="milage_per_L">Mileage Per Liter</string>
</resources>