<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        tools:context=".activitys.settings.car.NewCarActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_included" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">


                <com.mindnotix.texibee.views.roundedimage.RoundedImageView
                    android:id="@+id/imgCar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_110sdp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_car_placeholder"
                    app:riv_corner_radius="@dimen/_10sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/car_company"
                        android:textColor="@color/view_black" />


                    <EditText
                        android:id="@+id/edtVehicleName"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/field_border"
                        android:hint="@string/enter_car_company_name"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:text=""
                        android:textColor="@color/view_black"
                        android:textColorHint="@color/view_grey2" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/car_model"
                        android:textColor="@color/view_black" />


                    <EditText
                        android:id="@+id/edtVehicleModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/field_border"
                        android:hint="@string/enter_car_model"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:text=""
                        android:textColor="@color/view_black"
                        android:textColorHint="@color/view_grey2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/registration_number"
                        android:textColor="@color/view_black" />


                    <EditText
                        android:id="@+id/edtVehicleNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/field_border"
                        android:hint="@string/enter_reg_no"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:text=""
                        android:textColor="@color/view_black"
                        android:textColorHint="@color/view_grey2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:text="@string/milage_per_L"
                            android:textColor="@color/view_black" />


                        <EditText
                            android:id="@+id/edtMilagePerLiter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/field_border"
                            android:hint="@string/milage_per_L"
                            android:inputType="text"
                            android:padding="@dimen/_10sdp"
                            android:text=""
                            android:textColor="@color/view_black"
                            android:textColorHint="@color/view_grey2" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:background="@drawable/btn_border"
                        android:backgroundTint="@color/view_main_color"
                        android:elevation="0dp"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/save_details"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>
