<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_dialog_shape"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_close" />


        <ImageView
            android:id="@+id/imgStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_warning" />


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/_minus2sdp"
            android:text="@string/delete_car"
            android:textColor="@color/view_black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/_minus2sdp"
            android:text="@string/are_you_sure_you_want_to_delete_car_details"
            android:textColor="@color/view_black"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_border"
                android:elevation="0dp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_border"
                android:backgroundTint="@color/view_main_color"
                android:elevation="0dp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>
</layout>
